// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataloader mapDataWithIds returns map data structure 1`] = `
Array [
  Object {
    "id": "1",
  },
  Object {
    "id": "2",
  },
]
`;

exports[`dataloader mapDataWithIdsByCustomFieldId returns map data structure with custom field 1`] = `
Array [
  Object {
    "id": "1",
    "name": "AAAA",
  },
  Object {
    "id": "2",
    "name": "BBBB",
  },
]
`;

exports[`dataloader mapDatasWithIdsByCustomField returns map muliple data structure with custom field 1`] = `
Array [
  Array [
    Object {
      "id": "2860e6ff-87ef-44c8-995f-7c4b516c1794",
      "projectId": "TEST_PROJECT_ID_1",
      "tag": "TAG_A",
    },
    Object {
      "id": "2860e6ff-87ef-44c8-995f-7c4b516c1890",
      "projectId": "TEST_PROJECT_ID_1",
      "tag": "TAG_C",
    },
  ],
  Array [
    Object {
      "id": "6f5b77dd-7859-4229-86d8-1b92063b24e1",
      "projectId": "TEST_PROJECT_ID_2",
      "tag": "TAG_B",
    },
  ],
]
`;
